[Lab 2] - fixed folder location and css alignment issue

--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
+.cards{
+    margin: auto;
+    padding: 5%;
+}
+
 .searchNumber {
+    margin: auto;
     background-color: #333;
     overflow: hidden;
 }
@@ -14,6 +20,7 @@
 }
 
 .searchName {
+    margin: auto;
     background-color: #333;
     overflow: hidden;
 }
@@ -77,7 +84,7 @@ ul {
 }
 
 .footer {
-    position: fixed;
+    
     left: 0;
     bottom: 0px;
     width: 100%;
